--- a/src/app/project/project-list/project-list.component.html
+++ b/src/app/project/project-list/project-list.component.html
@@ -17,7 +17,7 @@
         </tr>
     </thead>
     <tbody>
-        <tr *ngFor="let col of projectFeedbackList">
+        <tr *ngFor="let col of projectFeedbackList | slice: pageSize | slice: 0:itemsPerPage">
             <td>{{col.fname}}</td>
             <td>{{col.lname}}</td>
             <td>{{col.eid}}</td>
@@ -42,9 +42,15 @@
                 </div>
             </td>
         </tr>
-        <div class="NotFound" *ngIf = "projectFeedbackList.length <= 0">No Employee Data Available</div>
+       
     </tbody>
 </table>
+    <div class="text-center">
+        <ngb-pagination class="d-flex justify-content-center" [collectionSize]="projectFeedbackList.length"  [pageSize]="itemsPerPage" [(page)]="currentPage" (pageChange)="onPageChange(currentPage)"></ngb-pagination>
+    </div>
+<div class="NotFound" *ngIf = "projectFeedbackList.length <= 0"></div>
+
+
 <div class="modal" id="myModal" [style.display]="showModal ? 'block' : 'none'">
     <div class="modal-dialog">
         <div class="modal-content">
@@ -133,8 +139,8 @@
                           </div>
                     </div>
                     <div class="text-right">
-                    <input class="btn btn-secondary mx-2" type="button" (click)="hide()" value="Cancel">
-                    <input class="btn btn-success mx-2" type="submit" value="Add">
+                    <input class="btn btn-secondary mx-2 cancel" type="button" (click)="hide()" value="Cancel">
+                    <input class="btn btn-success mx-2" type="submit" value="{{editMode ? 'Update' : 'Add'}}">
                     </div>
                 </form>
             </div>
