--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,16 +1,24 @@
 <h4 class="row">MyBooking</h4>
 <div class="login-container">
     <form [formGroup]="loginForm" class="login-container" (ngSubmit)="login()">
-        <h5 class="login-header text-center" style="padding-bottom:10px;">Login</h5>
+        <h2 class="login-header text-center" style="padding-bottom:10px;">Login</h2>
         <div class="form-group">
-            <input class="form-control" type="email" placeholder="Email" formControlName="username">
+            <input class="form-control" type="email" placeholder="Email" formControlName="username"
+            [ngClass]="{ 'is-invalid': submitted && f.username.errors }" >
+            <div *ngIf="submitted && f.username.errors" class="invalid-feedback">
+                <div *ngIf="f.username.errors.required">UserName is required</div>
+              </div> 
         </div>
 
         <div class="form-group">
-            <input class="form-control" type="password" placeholder="Password" formControlName="password">
+            <input class="form-control" type="password" placeholder="Password" formControlName="password"
+            [ngClass]="{ 'is-invalid': submitted && f.password.errors }">
+            <div *ngIf="submitted && f.password.errors" class="invalid-feedback">
+                <div *ngIf="f.password.errors.required">Password is required</div>
+              </div> 
         </div>
 
-        <input class="btn btn-block" type="submit" value="Login">
+        <input [disabled]="loginForm.invalid" class="btn btn-block" type="submit" value="Login">
 
     </form>
 </div>
