--- a/src/app/project/project-list/project-list.component.html
+++ b/src/app/project/project-list/project-list.component.html
@@ -140,7 +140,7 @@
                     </div>
                     <div class="text-right">
                     <input class="btn btn-secondary mx-2 cancel" type="button" (click)="hide()" value="Cancel">
-                    <input class="btn btn-success mx-2" type="submit" value="{{editMode ? 'Update' : 'Add'}}">
+                    <input class="btn btn-success mx-2" type="submit" value="{{editMode ? 'Update' : 'Add'}}" [disabled]="feedbackForm.invalid">
                     </div>
                 </form>
             </div>
